# project_boilerplate_secured_agent_V1_LITE

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: graph.py  tools.py
config/: constants.py
docs/: architecture.mermaid
tests/: test_security.py
