[project]
name = "mcp-agent-boilerplate"
version = "1.0.0"
description = "A production-ready boilerplate for building secured AI agents with ReAct loop orchestration via LangGraph."
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    # Core
    "python-dotenv>=1.0.0",

    # Agent Framework
    "langgraph>=1.1.3",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",

    # UI
    "gradio>=6.13.0",

    # HTTP client — async HTTP for MCP calls
    "httpx>=0.27.0",

    # Observability
    "langfuse>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpaths = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
